--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,11 @@ services:
   app:
     container_name: app
     build: .
-    command: bash -c "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
+    command: >
+      bash -c "uvicorn main:app --host 0.0.0.0 --port 8000 --reload && python ../scripts/excel_inventory.py"
     volumes:
       - ./app:/app
+      - ./scripts:/scripts
     ports:
       - "8000:8000"
     environment:
@@ -20,4 +22,3 @@ services:
     depends_on:
       - db
     restart: always
-
