--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 annotated-types==0.6.0
 anyio==4.2.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-dnspython==2.6.0
+dnspython==2.6.1
+et-xmlfile==1.1.0
+exceptiongroup==1.2.0
 fastapi==0.109.2
 greenlet==3.0.3
 h11==0.14.0
@@ -11,15 +15,27 @@ idna==3.6
 Mako==1.3.2
 MarkupSafe==2.1.5
 motor==3.3.2
+numpy==1.26.4
+openpyxl==3.1.2
+panda==0.3.1
+pandas==2.2.0
+pyarrow==15.0.0
 pydantic==2.6.1
 pydantic_core==2.16.2
 pymongo==4.6.1
+python-dateutil==2.8.2
 python-dotenv==1.0.1
+python-multipart==0.0.9
+pytz==2024.1
 PyYAML==6.0.1
+requests==2.31.0
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.27
 starlette==0.36.3
 typing_extensions==4.9.0
+tzdata==2024.1
+urllib3==2.2.1
 uvicorn==0.27.1
 watchfiles==0.21.0
 websockets==12.0
